crates/formatter/tests/snapshots/snapshots__synapse__main__delta__80__02_read_write_locks_unlogged.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2023 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- Mark the worker_read_write_locks* tables as UNLOGGED, to increase
-- performance. This means that we don't replicate the tables, and they get
-- truncated on a crash. This is acceptable as a) in those cases it's likely
-- that Synapse needs to be stopped/restarted anyway, and b) the locks are
-- considered best-effort anyway.

-- We need to remove and recreate the circular foreign key references, as
-- UNLOGGED tables can't reference normal tables.
alter table worker_read_write_locks_mode
	drop constraint if exists worker_read_write_locks_mode_foreign;

alter table worker_read_write_locks set unlogged;
alter table worker_read_write_locks_mode set unlogged;

alter table worker_read_write_locks_mode
	add constraint worker_read_write_locks_mode_foreign foreign key (
		lock_name,
		lock_key,
		token
	) references worker_read_write_locks (
		lock_name,
		lock_key,
		token
	) deferrable initially deferred;
